Fix text alignment.

--- a/dt-assets/scss/_main.scss
+++ b/dt-assets/scss/_main.scss
@@ -410,6 +410,7 @@ html[dir="rtl"] #top-bar-menu {
 
 .title-bar-right {
     float: right;
+    text-align: left;
 }
 
 .title-bar-right > * {
